# Proiect_ros2_psd

install/: local_setup.sh  setup.sh
install/color_navigator/share/color_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/: .gitignore
src/color_navigator/: README.md  package.xml  setup.py
src/color_navigator/color_navigator/: color_detector_node.py  robot_controller_node.py
src/color_navigator/launch/: Maps_box.launch.py  navigate_box.launch.py
src/color_navigator/models/camera_robot/: model.config  model.sdf
src/color_navigator/models/colored_box/: model.config  model.sdf
src/color_navigator/resource/: color_navigator
src/color_navigator/worlds/: box_world.world
src/turtle_controller/: package.xml  setup.py
src/turtle_controller/turtle_controller/: hand_control.py
(+673 files in other folders)
